# tourism-demand-chile

./: README.md  main.py  pyproject.toml
data/processed/: llegadas-de-turistas-extranjeros.parquet
notebooks/: 01_eda.ipynb  sandbox.ipynb
src/data/: FuncionesTarea.py  constants.py  load.py  timeseries.py
